tests/baselines/reference/superCallBeforeThisAccessing3.errors.txt
superCallBeforeThisAccessing3.ts(9,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== superCallBeforeThisAccessing3.ts (1 errors) ====
    class Base {
        constructor(c) { }
    }
    class D extends Base {
        private _t;
        constructor() {
            let x = () => { this._t };
            x();  // no error; we only check super is called before this when the container is a constructor
            this._t;  // error
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(undefined);
        }
    }
    